# TgBotTemplate

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Application.hpp
include/core/: Application.hpp  Constants.hpp
src/: Application.cpp  main.cpp
src/core/: Application.cpp
